home-cluster/security-scanning/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivy
  namespace: security-scanning
  labels:
    app: trivy
spec:
  type: ClusterIP
  selector:
    app: trivy
  ports:
  - name: http
    port: 8080
    targetPort: 8080
