home-cluster/security-scanning/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: security-scanning
  namespace: security-scanning
  labels:
    app: security-scanning
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`security.kube.stevearnett.com`)
    kind: Rule
    services:
    - name: trivy
      port: 8080
      weight: 1
  tls:
    secretName: wildcard-stevearnett-com-tls
